@@ -1,3 +1,7 @@
+2008-01-30  John W. Eaton  <jwe@octave.org>
+
+	* strings/deblank.m: Improve compatibility.
+
 2008-01-29  John W. Eaton  <jwe@octave.org>
 
 	* strings/str2double.m: Delete unused variable FLAG_OCTAVE.
